@@ -154,6 +154,7 @@ namespace Yafc.Model {
         public List<FactorioObject> milestones { get; } = [];
         public SortedList<FactorioObject, ProjectPerItemFlags> itemFlags { get; } = new SortedList<FactorioObject, ProjectPerItemFlags>(DataUtils.DeterministicComparer);
         public float miningProductivity { get; set; }
+        public float researchSpeedBonus { get; set; }
         public int reactorSizeX { get; set; } = 2;
         public int reactorSizeY { get; set; } = 2;
         public float PollutionCostModifier { get; set; } = 0;
