@@ -16,6 +16,8 @@ Date: soon
     Features:
         - Add the option to specify how many beacons, with what modules, should be applied on a per-building-type
           basis, in addition to the global and per-recipe-row settings.
+        - Allow adding technologies to the tables as science-pack-voiding recipes, by ctrl-clicking on the
+          "Add raw recipe" buttons. Add a setting for research speed bonus, to correctly calculate lab speed/counts.
     Bugfixes:
         - Fix PageSearch scrollbar not working.
         - Refresh the milestones display after adding or removing milestones.
